# ff

./: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  configure  configure.ac  ff.Rproj
R/: CFUN.R  array.R  as.ff.R  bigsample.R  ff.R  ffapply.R  ffbit.R  ffcsv.R  ffdf.R  fffactor.R  ffreturn.R  ffsave.R  fileresize.R  fileutil.R  generics.R  getpagesize.R  hi.R  ordermerge.R  util.R  vmode.R  vt.R  zzz.R
exec/: prebuild.sh
inst/doc/: ANNOUNCEMENT-2.0.txt  ANNOUNCEMENT-2.1.2.txt  ANNOUNCEMENT-2.1.txt  ANNOUNCEMENT-2.2.txt  README_devel.txt
man/: CFUN.rd  Extract.ff.rd  Extract.ffdf.rd  Forbidden_ffdf.rd  Internal_ffdf.rd  LimWarn.rd  add.rd  array2vector.rd  arrayIndex2vectorIndex.rd  as.ff.bit.rd  as.ff.rd  as.ffdf.rd  as.hi.rd  as.integer.hi.rd  as.vmode.rd  bigsample.rd  chunk.ffdf.rd  clone.ff.rd  clone.ffdf.rd  close.ff.rd  delete.rd  dim.ff.rd  dimnames.ff.rd  dimnames.ffdf.rd  dimorderCompatible.rd  dummy.dimnames.rd  ff.rd  ffapply.rd  ffconform.rd  ffdf.rd  ffdfindexget.rd  ffdfsort.rd  ffdrop.rd  ffindexget.rd  ffindexorder.rd  ffinfo.rd  ffload.rd  fforder.rd  ffreturn.rd  ffsave.rd  (+61 more)
src/: Array.hpp  Error.cpp  Error.hpp  FSInfo.hpp  FSInfo_statfs.cpp  FSInfo_win32.cpp  FileMapping.hpp  MMapFileMapping.cpp  MMapFileMapping.hpp  Win32FileMapping.cpp  Win32FileMapping.hpp  ac_config.h  ac_config.h.in  config.h  ff.cpp  ff.h  ordermerge.c  r_ff.c  r_ff.h  r_ff_addgetset.h  r_ff_makevmodes.h  r_ff_methoddeclaration.h  r_ff_methodswitch.h  r_file_resize.cpp  r_file_resize.h  types.hpp  utk_config.hpp  utk_file_allocate_fseek.cpp  utk_file_allocate_fseek.hpp  utk_file_resize.cpp  utk_file_resize.hpp  utk_file_resize_ftruncate.hpp  utk_file_resize_win32.hpp  utk_platform_macros.hpp
tests/: testthat.R
tests/testthat/: test-zeroRows.R  test-zero_lengths.R
